--- a/index.html
+++ b/index.html
@@ -32,10 +32,8 @@ h1 {color:#2c3e50; margin:0; font-size:28px;}
 <script>
 // Chemins des 20 tuiles PNG
 const tilePaths = [
-    "png/tile_1.png",  "png/tile_2.png",  "png/tile_3.png",  "png/tile_4.png",  "png/tile_5.png",
-    "png/tile_6.png",  "png/tile_7.png",  "png/tile_8.png",  "png/tile_9.png",  "png/tile_10.png",
-    "png/tile_11.png", "png/tile_12.png", "png/tile_13.png", "png/tile_14.png", "png/tile_15.png",
-    "png/tile_16.png", "png/tile_17.png", "png/tile_18.png", "png/tile_19.png", "png/tile_20.png"
+    "png/tile_2.png",  "png/tile_3.png",  "png/tile_4.png","png/tile_6.png",  "png/tile_7.png",  "png/tile_8.png",  "png/tile_10.png",
+    "png/tile_11.png", 
 ];
 
 // Charger les tuiles dans la grille
@@ -53,3 +51,4 @@ tilePaths.forEach((path, index) => {
 </script>
 </body>
 </html>
+
