--- a/index.html
+++ b/index.html
@@ -1,54 +1,15 @@
-<!DOCTYPE html>
-<html lang="fr">
-<head>
-<meta charset="utf-8">
-<title>Mosaïque Image Drone</title>
-<style>
-body, html {margin:0; padding:0; height:100%; background:#2c3e50; display:flex; justify-content:center; align-items:center; font-family:Arial;}
-.container {max-width:1400px; width:100%; background:#fff; padding:30px; border-radius:15px; box-shadow:0 5px 15px rgba(0,0,0,.3); border:3px solid #3498db; text-align:center;}
-.header {margin-bottom:30px; border-bottom:2px solid #ecf0f1; padding-bottom:20px;}
-.logo {height:80px; margin-bottom:15px;}
-h1 {color:#2c3e50; margin:0; font-size:28px;}
-.image-container {border:3px solid #34495e; border-radius:10px; padding:10px; background:#f8f9fa; margin:0 auto;}
-.image-grid {display:grid; grid-template-columns:repeat(5,1fr); grid-template-rows:repeat(4,1fr); gap:0; width:1024px; height:1024px; margin:0 auto; border:2px solid #7f8c8d; border-radius:5px; overflow:hidden;}
-.tile {width:100%; height:100%; object-fit:cover;}
-.info {color:#7f8c8d; margin-top:20px; font-style:italic;}
-</style>
-</head>
-<body>
-<div class="container">
-    <div class="header">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/5/54/Logo_iav.png" alt="Logo IAV" class="logo">
-        <h1>Mosaïque Image Drone</h1>
-    </div>
-    <div class="image-container">
-        <div class="image-grid" id="imageGrid"></div>
-    </div>
-    <div class="info">
-        <p>Mosaïque générée à partir de 20 tuiles haute résolution.</p>
-    </div>
-</div>
-
-<script>
-// Chemins des 20 tuiles PNG
+<!DOCTYPE html><html><head><meta charset="utf-8"><title>Image Multispectrale Landsat</title><style>body,html{margin:0;padding:0;height:100%;background:#2c3e50;font-family:Arial}.container{max-width:1200px;margin:20px auto;background:#fff;padding:30px;border-radius:15px;box-shadow:0 5px 15px rgba(0,0,0,.3);border:3px solid #3498db;text-align:center}.header{margin-bottom:30px;padding-bottom:20px;border-bottom:2px solid #ecf0f1}.logo{height:80px;margin-bottom:15px}h1{color:#2c3e50;margin:0;font-size:28px}.image-container{border:3px solid #34495e;border-radius:10px;padding:15px;background:#f8f9fa;margin:0 auto}.image-grid{display:grid;grid-template-columns:repeat(4,1fr);grid-template-rows:repeat(3,1fr);gap:0;width:1024px;height:768px;margin:0 auto;border:2px solid #7f8c8d;border-radius:5px;overflow:hidden}.tile{width:100%;height:100%;object-fit:cover;display:block}.info{color:#7f8c8d;margin-top:20px;font-style:italic}.dimensions{color:#2c3e50;font-weight:700;margin:10px 0;background:#e8f4fc;padding:8px;border-radius:5px}</style></head><body><div class="container"><div class="header"><img src="https://upload.wikimedia.org/wikipedia/commons/5/54/Logo_iav.png" alt="Logo IAV" class="logo"><h1>Image Multispectrale Landsat</h1><div class="dimensions">Dimensions : 791 × 655 pixels | 12 tuiles (4×3)</div></div><div class="image-container"><div class="image-grid" id="imageGrid"></div></div><div class="info"><p>Image Landsat multispectrale - Composition RGB</p></div></div><script>// Les 12 tuiles
 const tilePaths = [
-    "png/tile_2.png",  "png/tile_3.png",  "png/tile_4.png","png/tile_6.png",  "png/tile_7.png",  "png/tile_8.png",  "png/tile_10.png",
-    "png/tile_11.png", 
+    "1.png", "2.png", "3.png", "4.png",
+    "5.png", "6.png", "7.png", "8.png", 
+    "9.png", "10.png", "11.png", "12.png"
 ];
-
-// Charger les tuiles dans la grille
 const grid = document.getElementById('imageGrid');
+// Charger directement les tuiles
 tilePaths.forEach((path, index) => {
     const img = document.createElement('img');
     img.src = path;
-    img.alt = `Tuile ${index+1}`;
+    img.alt = `Tuile ${index + 1}`;
     img.className = 'tile';
-    img.onerror = function() {
-        this.src = 'https://via.placeholder.com/256/ecf0f1/34495e?text=Tuile+' + (index+1);
-    };
     grid.appendChild(img);
-});
-</script>
-</body>
-</html>
-
+});</script></body></html>
